# ets2-util

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: init.c  init.h  main.c  main.h  tick.c  tick.h
src/util/: logging.c  logging.h  pointer.h
src/util/pattern/: pattern.c  pattern.h  pattern_scan.c  pattern_scan.h
